# ipcamera

./: .gitignore
live555/live555/: live555.sln
live555/live555/BasicUsageEnvironment/: BasicUsageEnvironment.vcxproj  BasicUsageEnvironment.vcxproj.filters
live555/live555/BasicUsageEnvironment/Debug/: BasicUsageEnvironment.idb  BasicUsageEnvironment.pch
live555/live555/BasicUsageEnvironment/Debug/BasicUsa.08823D67.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
live555/live555/BasicUsageEnvironment/x64/Debug/: BasicUsageEnvironment.idb  BasicUsageEnvironment.pch
live555/live555/BasicUsageEnvironment/x64/Debug/BasicUsa.08823D67.tlog/: CL.command.1.tlog  (+6 more)
live555/live555/Debug/: UsageEnvironment.lib  groupsock.lib  liveMedia.lib  mediaServer.ilk
live555/live555/UsageEnvironment/: UsageEnvironment.vcxproj  UsageEnvironment.vcxproj.filters
live555/live555/UsageEnvironment/Debug/: UsageEnvironment.idb  UsageEnvironment.pch
live555/live555/UsageEnvironment/Debug/UsageEnvironment.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
live555/live555/UsageEnvironment/x64/Debug/: UsageEnvironment.idb  UsageEnvironment.pch
live555/live555/groupsock/: groupsock.vcxproj  groupsock.vcxproj.filters
live555/live555/groupsock/Debug/: groupsock.idb  groupsock.pch
live555/live555/groupsock/Debug/groupsock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
live555/live555/groupsock/x64/Debug/: groupsock.idb  groupsock.pch
live555/live555/liveMedia/: liveMedia.vcxproj  liveMedia.vcxproj.filters
live555/live555/liveMedia/Debug/: liveMedia.idb  liveMedia.pch
live555/live555/liveMedia/Debug/liveMedia.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  liveMedia.lastbuildstate
live555/live555/liveMedia/x64/Debug/: liveMedia.idb  liveMedia.pch
live555/live555/mediaServer/: live555MediaServer.cpp  mediaServer.cpp  mediaServer.vcxproj  mediaServer.vcxproj.filters
live555/live555/mediaServer/Debug/: mediaServer.pch  vc141.idb
live555/live555/mediaServer/Debug/mediaServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
live555/live555/mediaServer/x64/Debug/: mediaServer.pch  vc141.idb
live555/live555/x64/Debug/: 1.mpg  BasicUsageEnvironment.lib  UsageEnvironment.lib  groupsock.lib
live555_linux/liveMedia/: CMakeLists.txt  Makefile
live555_linux/mediaServer/: Makefile  live555MediaServer
live555_linux/mediaServer/usb_camera/: CMakeLists.txt  readme.txt  ubuntu_encode_usb_camera.c  ubuntu_encode_usb_camera.cpp
live555_linux/mediaServer/usb_camera/xvidcore/: ChangeLog
live555_linux/proxyServer/: live555ProxyServer
live555_linux/testProgs/: MPEG2TransportStreamIndexer  Makefile  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToHLSSegments  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVSplitter  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamSplitter  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testOnDemandRTSPServer  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
v4l2_camera/: CMakeLists.txt  v4l2_camera_interface.cpp  v4l2_camera_interface.h
(+24 files in other folders)
